--- a/mainapp/requirements.txt
+++ b/mainapp/requirements.txt
@@ -5,21 +5,14 @@ click==7.1.2
 Flask-SQLAlchemy==2.5.1
 Flask-Login==0.5.0
 Flask-Migrate==3.0.0
-
 psycopg2-binary==2.9.5
-
 WTForms==2.3.3
 Flask-WTF==0.15.1
 email-validator==1.1.2
-
 Flask-Admin==1.5.8
-
 Flask-COMBO-JSONAPI==1.0.7
-
 ComboJSONAPI==1.1.1
-
 apispec==4.7.1
-
 PyYAML==5.4.1
-
 requests==2.26.0
+gunicorn
