--- a/mainapp/Dockerfile
+++ b/mainapp/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8.10-buster
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
+COPY ../requirements.txt requirements.txt
 
 RUN pip install --no-cache --user -r requirements.txt
 
